# volby-2023-backend

./: .gitignore  Dockerfile  README.md  db.sql  pyproject.toml
backend/: __main__.py  data.py
data/: obce.csv
settings/: base.py  static.py
