[tool.poetry]
name = "volby-2023-backend"
version = "0.1.0"
description = ""
authors = ["Roman Zydyk <romanzdk@gmail.com>"]
readme = "README.md"
packages = [{include = "volby_2023_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.7"
requests = "^2.28.2"
xmltodict = "^0.13.0"
psycopg2 = "^2.9.5"
pytz = "^2022.7.1"


[tool.poetry.group.dev.dependencies]
ql-cq = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
